# cantata

./: Cargo.toml  Readme.md  Readme.org
.github/workflows/: check.yml  test.yml
data/: main.py
doc/: cantata.org
examples/bio450/: Untitled.ipynb  bio450-analysis.ipynb  main.py
examples/bio450/.ipynb_checkpoints/: bio450-analysis-checkpoint.ipynb
examples/bio450/acc/: 472363762_fit.acc  472912177_fit.acc  473862421_fit.acc  473863035_fit.acc  473863510_fit.acc
src/: err.rs  fit.rs  gen.rs  lib.rs  main.rs  nml.rs  raw.rs  sim.rs  sup.rs
tests/bio_1cell/: config.simulation_iclamp.json  config.simulation_syns.json
