[package]
name = "cantata"
version = "0.1.0"
edition = "2021"
authors = ["T. Hater"]
readme = "Readme.org"
license = "BSD-3"
repository = "https://github.com/thorstenhater/cantata"
description = "Convert SONATA package neuro science simulations into Arbor simulations."


[dependencies]
serde        = { version = "1.0", features = ["derive"] }
serde_json   = { version = "1.0" }
clap         = { version = "4.0", features = ["derive"] }
thiserror    = { version = "1.0" }
anyhow       = { version = "1.0" }
csv          = { version = "1.0" }
hdf5-metno   = { version = "0.9" }
ciborium     = { version = "0.2" }
serde-pickle = { version = "1.1" }

[[bin]]
name = "cantata"
path = "src/main.rs"
